# greenfields-of-cambridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SETTINGS.md  fly.toml  index.html  styles.css
config/: default.toml  local.toml  production.toml
docs/: e2e-testing-guide.md
src/: error.rs  lib.rs  main.rs  settings.rs
src/handlers/: contact.rs  mod.rs  pages.rs
static/: styles.css
tasks/: consolidate-contact-form.md
templates/: contact_form.html  error.html  index.html
tests/: contact_integration_test.rs
tests/playwright/: .gitignore  README.md  home-page.spec.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
