[package]
name = "greenfields-of-cambridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datastar = { version = "0.3", features = ["axum"] }
async-stream = "0.3"

